--- a/growlers/package.json
+++ b/growlers/package.json
@@ -10,7 +10,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "extension": "link:../extension",
+    "extension": "1.0.0",
     "framer-motion": "^3.3.0-beta.22",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
